--- a/app/src/main/res/layout/activity_view_animation.xml
+++ b/app/src/main/res/layout/activity_view_animation.xml
@@ -47,6 +47,15 @@
             android:onClick="alphaAnimation"
             />
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="组合动画"
+            android:textAllCaps="false"
+            android:onClick="playSetAnimation"
+            />
+
+
 
     </LinearLayout>
 
