--- a/app/src/main/res/layout/activity_frame_animation.xml
+++ b/app/src/main/res/layout/activity_frame_animation.xml
@@ -6,4 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".activity.FrameAnimationActivity">
 
+    <ImageView
+        android:id="@+id/iv_frame"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/animation_frame"
+        android:layout_marginBottom="100dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="play"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_red_light"
+        android:onClick="playFrameAnimation"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_frame"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="stop"
+        android:textColor="@android:color/white"
+        android:background="@android:color/holo_red_light"
+        android:onClick="stopFrameAnimation"
+        android:layout_marginTop="100dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iv_frame"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
