--- a/app/src/main/res/layout/activity_view_animation.xml
+++ b/app/src/main/res/layout/activity_view_animation.xml
@@ -43,6 +43,13 @@
             android:textAllCaps="false"
             android:onClick="showLayoutAnimation"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Activity切换动画"
+            android:textAllCaps="false"
+            android:onClick="showSwitchAnimation"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
