【View动画】自定义Dialog进入退出动画

--- a/app/src/main/res/layout/activity_view_animation.xml
+++ b/app/src/main/res/layout/activity_view_animation.xml
@@ -50,6 +50,13 @@
             android:textAllCaps="false"
             android:onClick="showSwitchAnimation"/>
 
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="自定义Dialog动画"
+            android:textAllCaps="false"
+            android:onClick="showDialogAnimation"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
