--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,7 +3,6 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="android:windowAnimationStyle">@style/WindowAnimation</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -17,11 +16,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="WindowAnimation" parent="@android:style/Animation">
+    <style name="WindowAnimation" parent="@android:style/Animation.Dialog">
         <!--窗体进入动画-->
         <item name="android:windowEnterAnimation" >@anim/anim_in_from_bottom</item>
         <!--窗体退出动画-->
-        <item name="android:windowExitAnimation" >@anim/anim_out_to_top</item>
+        <item name="android:windowExitAnimation" >@anim/anim_out_to_bottom</item>
     </style>
 
     <style name="ActivityAnimation" parent="@android:style/Animation.Activity">
