【View动画】区分分类与示例

--- a/app/src/main/res/layout/activity_view_animation.xml
+++ b/app/src/main/res/layout/activity_view_animation.xml
@@ -18,6 +18,15 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="View动画分类↓"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_red_light"
+            android:background="@android:color/white"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="补间动画"
             android:textAllCaps="false"
             android:onClick="showTweenAnimation"/>
@@ -35,6 +44,15 @@
             android:text="逐帧动画"
             android:textAllCaps="false"
             android:onClick="showFrameAnimation"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="View动画使用场景示例↓"
+            android:textAllCaps="false"
+            android:textStyle="bold"
+            android:textColor="@android:color/holo_red_light"
+            android:background="@android:color/white"/>
 
         <Button
             android:layout_width="match_parent"
