--- a/app/src/main/res/layout/activity_object_animator.xml
+++ b/app/src/main/res/layout/activity_object_animator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.PropertyAnimationActivity">
+    tools:context=".activity.ObjectAnimatorActivity">
 
     <LinearLayout
         android:id="@+id/ll_animator_items"
@@ -18,28 +18,49 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ObjectAnimator"
+            android:text="ObjectAnimator实现平移动画"
             android:textAllCaps="false"
-            android:onClick="showObjectAnimator"
+            android:onClick="playTranslateAnimator"
             />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ValueAnimator"
+            android:text="ObjectAnimator实现缩放动画"
             android:textAllCaps="false"
-            android:onClick="showValueAnimator"
+            android:onClick="playScaleAnimator"
             />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="AnimatorSet"
+            android:text="ObjectAnimator实现旋转动画"
             android:textAllCaps="false"
-            android:onClick="showAnimatorSet"
+            android:onClick="playRotateAnimator"
+            />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="ObjectAnimator实现透明动画"
+            android:textAllCaps="false"
+            android:onClick="playAlphaAnimator"
             />
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/tv_rect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="方块"
+        android:textSize="20sp"
+        android:textColor="@android:color/white"
+        android:padding="15dp"
+        android:background="@drawable/shape_rectangle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ll_animator_items"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
